# ChangeLog for dev-haskell/gtk2hs
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/gtk2hs/Attic/ChangeLog,v 1.2 2004/06/24 22:14:44 agriffis Exp $

*gtk2hs-0.9.5 (17 May 2004)

  17 May 2004; Andres Loeh <kosmikus@gentoo.org> gtk2hs-0.9.5.ebuild,
  metadata.xml:
  Initial import (bug #50998).
