@@ -1,4 +1,6 @@
+MD5 1b223c93901c172749dd08eab002c758 gtk2hs-0.9.6.ebuild 3834
 MD5 8e023ae1e205ac205cc17807eb74bbd5 gtk2hs-0.9.5.ebuild 2586
 MD5 75a9da34a0c1057b0f81fead3495e43b ChangeLog 358
 MD5 a769ecfcd1cdd2d40986627df7dfb249 metadata.xml 224
 MD5 2785816eabb8f055db732986a48f65fd files/digest-gtk2hs-0.9.5 64
+MD5 96674cbaf4f6bddf1517166b6e6f13a5 files/digest-gtk2hs-0.9.6 64
