@@ -1,0 +1,1 @@
+MD5 fdd2d08d9789d1011b44a1df048c95b9 gtk2hs-0.9.6.tar.gz 457131
